Refactor bean processing module after inject module split